trunk/Archive2/d4/eccf2a605082ea/output
main.cpp:23:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:12:5: error: 'CDerived::CDerived()' is private
     CDerived() { p = new int[1000]; }
     ^
main.cpp:25:24: error: within this context
     CBase* cBase = new CDerived;
                        ^
